# Daymark

./: .env.local.example  .gitignore  .npmrc  QA_ARCHIVE_REPORT.md  QA_REMEDIATION_RESULTS.md  RC2_CHECKLIST.md  README.md  RELEASE_NOTES.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: checks.yml
qa/: CASE_RESULT_TEMPLATE.md  QA_MATRIX.md  README.md  build-tauri-qa.ps1  clean-playwright-artifacts.ps1  evaluate-startup-probe.mjs  evaluate-startup-probe.selftest.mjs  generate-fixtures.mjs  generate-remediation-results.mjs  mock-ai.mjs  mock-ai.selftest.mjs  playwright.config.ts  remediation-evidence.json  run-installed-lifecycle.ps1  run-playwright.mjs  run-playwright.ps1  run-tauri-qa.ps1  start-preview.mjs  tauri.qa.conf.json  test-mock-ai.ps1  test-security-regression.mjs  vitest.config.ts
qa/e2e/: archive-smoke.pw.ts
qa/tests/: data-pressure.qa.ts
src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  quick-capture.json
src-tauri/src/: ai_secrets.rs  ai_security.rs  ai_transport.rs  conversation_sessions.rs  file_commands.rs  lib.rs  main.rs  main_window_state.rs  qa_automation.rs  quick_capture.rs  text_utils.rs
src/ai/: deepseek.test.ts  deepseek.ts
src/components/: AiConnectionConfigDialog.tsx  AppearanceStyleSettings.tsx  ConfirmDialog.tsx  ConversationScanWorkspace.tsx  ConversationSessionPreviewOverlay.tsx  DatePickerPopover.tsx  EditForm.tsx  EditorOverlay.tsx  ExtractDialog.tsx  FirstRunGuide.tsx  FocusOverlay.tsx  FolderPicker.tsx  ImportDialog.tsx  ItemList.tsx  ItemReader.tsx  JournalPage.tsx  LibrarySmartToolbar.tsx  LinkPanel.tsx  MainWindowTitleBar.tsx  MarkdownContent.test.tsx  MarkdownContent.tsx  MarkdownEditor.tsx  MemoryPage.tsx  PageWorkspace.tsx  QuickCaptureWindow.tsx  ResultPanels.tsx  ReviewGenerationWorkspace.tsx  ReviewLibraryHistoryDialog.tsx  ReviewLibraryUpdateDialog.tsx  ReviewProgressIndicator.tsx  ReviewPublishDialog.tsx  SearchPage.tsx  SelectMenu.tsx  SettingsPanel.tsx  Sidebar.tsx  StartupScreen.tsx  TodayAutoWorkReview.tsx  TodayPage.tsx
src/data/: demoLibrary.test.ts  demoLibrary.ts  demoLibraryModel.ts  demoSeed.ts  itemStore.backup.test.ts  itemStore.inlineLinks.test.ts  itemStore.reviewPublication.test.ts  itemStore.reviewVersioning.test.ts  itemStore.ts  memorySuggestionFlow.test.ts  reviewGenerationCheckpoint.test.ts  seedFolders.ts  seedItems.ts  seedJournalEntries.ts
src/hooks/: useMainWindowMaximized.ts  useModalFocusTrap.ts
src/lib/: accent.test.ts  accent.ts  aiConnectionDisplay.test.ts  aiConnectionDisplay.ts  aiSecrets.test.ts  aiSecrets.ts  aiTransport.ts  autoWorkReview.test.ts  autoWorkReview.ts  conversationDateIndex.test.ts  conversationDateIndex.ts  conversationReadProgress.test.ts  conversationReadProgress.ts  conversationReviewWarning.test.ts  conversationReviewWarning.ts  conversationReviewWorkbench.test.ts  conversationReviewWorkbench.ts  conversationScanProgress.test.ts  conversationScanProgress.ts  conversationScanTask.test.ts  conversationScanTask.ts  date.ts  desktop.ts  folders.test.ts  (+26 more)
(+3 files in other folders)
