[package]
name = "daymark"
version = "0.1.0-rc.10"
description = "Daymark local-first desktop knowledge base"
authors = ["local"]
edition = "2021"

[lib]
name = "personal_knowledge_base_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
lopdf = "0.35"
base64 = "0.22"
keyring = { version = "4.1.4", features = ["v1"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1", features = ["macros"] }
tokio-util = "0.7"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
tauri-plugin-window-state = "2.4.1"
